--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="phone_number">Номер телефона</string>
     <string name="enter_your_number_title">Введите свой номер для авторизации</string>
+    <string name="welcome_title">Добро пожаловать в БИА.Помощник логиста</string>
+    <string name="text_logisthelper">Помощник логиста</string>
+    <string name="next_button">Продолжить</string>
 </resources>
